--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -54,7 +54,7 @@
             redirect: 'follow'
             };
 
-            fetch("http://localhost:8181/api/sezzle/calculator/calculate/", requestOptions)
+            fetch("https://immense-bastion-63364.herokuapp.com/api/sezzle/calculator/calculate/", requestOptions)
             .then(response => response.text())
             .then(result => {
                 console.log(result);
@@ -73,7 +73,7 @@
             redirect: 'follow'
             };
 
-            fetch("http://localhost:8181//api/sezzle/calculator/getAllCalculations", requestOptions)
+            fetch("https://immense-bastion-63364.herokuapp.com/api/sezzle/calculator/getAllCalculations", requestOptions)
             .then(response => response.json())
             .then(result => {
                 console.log(result)
