--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,8 +5,9 @@
     <title>Sezzle Calculator</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script>
-        const IP_address = "http://localhost:8181";
         var operator = null;
+        const local = true;
+        const address = local ? "http://localhost:8181" : "https://immense-bastion-63364.herokuapp.com";
 
         function clicked(arg) {
             operator = arg.value
@@ -29,7 +30,7 @@
         }
 
         function performCalculation() {
-            var API = "http://localhost:8181/api/sezzle/calculator/calculate";
+            
             var op1 = document.getElementById("operand1");
             var op2 = document.getElementById("operand2");
 
@@ -54,7 +55,7 @@
             redirect: 'follow'
             };
 
-            fetch("https://immense-bastion-63364.herokuapp.com/api/sezzle/calculator/calculate/", requestOptions)
+            fetch(address + "/api/sezzle/calculator/calculate/", requestOptions)
             .then(response => response.text())
             .then(result => {
                 console.log(result);
@@ -73,7 +74,7 @@
             redirect: 'follow'
             };
 
-            fetch("https://immense-bastion-63364.herokuapp.com/api/sezzle/calculator/getAllCalculations", requestOptions)
+            fetch(address + "/api/sezzle/calculator/getAllCalculations", requestOptions)
             .then(response => response.json())
             .then(result => {
                 console.log(result)
@@ -91,35 +92,30 @@
 </head>
 <body style="padding: 2%;">
     <h1>Welcome to sezzle calculator</h1>
-    <div class="row" style="text-align: center;">
+    <div class="row" style="text-align: center; margin-top: 2%;">
         <div class="col-sm-3">
-            <br>
             <a>Enter operand 1: </a>
             <br>
             <input id="operand1" type="text" oninput=operandValidation(operand1)>
         </div>
         <div class="col-sm-1">
-            <button id="add" value="+" style="width: 40px; background-color: white;" onclick=clicked(add)>+</button>
+            <button id="add" value="+" style="width: 50px; background-color: white; margin-right: 7%;" onclick=clicked(add)>+</button>
+            <button id="sub" value="-" style="width: 50px; background-color: white;" onclick=clicked(sub)>-</button>
             <br/>
-            <button id="sub" value="-" style="width: 40px; background-color: white;" onclick=clicked(sub)>-</button>
             <br/>
-            <button id="mul" value="*" style="width: 40px; background-color: white;" onclick=clicked(mul)>*</button>
-            <br/>
-            <button id="div" value="/" style="width: 40px; background-color: white;" onclick=clicked(div)>/</button>
+            <button id="mul" value="*" style="width: 50px; background-color: white; margin-right: 7%;" onclick=clicked(mul)>*</button>
+            <button id="div" value="/" style="width: 50px; background-color: white;" onclick=clicked(div)>/</button>
         </div>
         <div class="col-sm-3">
-            <br>
             <a>Enter operand 2: </a>
             <br>
             <input id="operand2" type="text" oninput=operandValidation(operand2)>
         </div>
         <div class="col-sm-1">
             <br>
-            <br>
-            <button id="equalTo" value="=" style="width: 40px; background-color: white;" onclick=performCalculation()>=</button>
+            <button id="equalTo" value="=" style="width: 50px; background-color: white;" onclick=performCalculation()>=</button>
         </div>
         <div class="col-sm-4">
-            <br>
             <a>Answer: </a>
             <br>
             <input id="result" value="" type="text" readonly>
@@ -128,12 +124,10 @@
         <a id="placeholder"></a>
     </div>
 
-    <div class="row" style="margin-top: 10%; height: 100%;">
-        <div class="col-sm-12" style="text-align: center;">
-            <!-- <input id="results" type="text"> -->
-            <h3>Latest results</h3>
-            <textarea id="allCalculations" style="width: 100%; height: 100%;" readonly></textarea>
-        </div>
+    <div class="container" style="margin-top: 7%; height: fit-content; text-align: center;">
+        <!-- <input id="results" type="text"> -->
+        <h3>Latest results</h3>
+        <textarea id="allCalculations" rows="12" style="width: 100%; height: 100%; text-align: center;" readonly></textarea>
     </div>
 </body>
 </html>
